added main page to navigate to all existing views

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".DeleteView"/>
+        <activity android:name=".IpAddressView"/>
+        <activity android:name=".GPSActivity"/>
+
 
     </application>
 
